# Core/Contracts/Entities/CuentaUpdateDTO.cs
@@ -1,0 +1,11 @@
+﻿using System.ComponentModel.DataAnnotations;
+using System.ComponentModel;
+
+namespace WebApi.Core.Contracts.Entities;
+
+public class CuentaUpdateDTO
+{
+    public string TipoCuenta { get; set; } = "Ahorro";
+    
+    public string Estado { get; set; } = "Activo";
+}
