# Core/Contracts/Enums/ErrorType.cs
@@ -16,6 +16,7 @@
         CLIENTE_NO_EXISTE,
         MOVIMIENTO_NO_EXISTE,
         CUENTA_NO_EXISTE,
-        SALDO_EXCEDIDO
+        SALDO_EXCEDIDO,
+        CUENTA_CON_MOVIMIENTOS
     }
 }
